--- a/diretivas/package.json
+++ b/diretivas/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^10.0.5",
     "@angular/platform-browser-dynamic": "^10.0.5",
     "@angular/router": "^10.0.5",
+    "boostrap": "^2.0.0",
     "bootstrap": "^4.3.1",
     "core-js": "^3.1.3",
     "rxjs": "^6.6.0",
@@ -46,5 +47,9 @@
     "ts-node": "~8.2.0",
     "tslint": "~6.1.0",
     "typescript": "~3.9.7"
-  }
+  },
+  "styles": [
+    "node_modules/bootstrap/dist/css/bootstrap.min.css",
+    "styles.scss"
+  ]
 }
