--- a/rotas/angular.json
+++ b/rotas/angular.json
@@ -1,5 +1,6 @@
 {
-  "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  
+  "$schema": "node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
@@ -24,11 +25,12 @@
               "src/styles.css"
             ],
             "scripts": [
-              "../jquery/dist/jquery.js",
-              "../hammerjs/hammer.js",
-              "../materialize-css/dist/js/materialize.js"
+              
+              
+
             ]
           },
+          
           "configurations": {
             "production": {
               "optimization": true,
@@ -79,7 +81,11 @@
               "node_modules/materialize-css/dist/js/materialize.js"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              
+                
+                "styles.scss"
+            
             ],
             "assets": [
               "src/assets",
@@ -137,4 +143,6 @@
       "prefix": "app"
     }
   }
+  
 }
+
