--- a/rotas/package.json
+++ b/rotas/package.json
@@ -21,10 +21,11 @@
     "@angular/platform-browser": "^7.2.7",
     "@angular/platform-browser-dynamic": "^7.2.7",
     "@angular/router": "^7.2.7",
+    "@types/jquery": "^3.5.14",
     "angular2-materialize": "^15.1.10",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
-    "jquery": "^3.2.1",
+    "jquery": "^3.6.0",
     "materialize-css": "^1.0.0",
     "rxjs": "^6.4.0",
     "rxjs-compat": "^6.0.0-rc.0",
